Fix spacing with menu and add script

--- a/css/classes.css
+++ b/css/classes.css
@@ -166,16 +166,13 @@
 
 @media(max-width:900px){
 
-    .class-grid{
+    .nav-links {
 
-        grid-template-columns:1fr;
+        width: 100%;
 
-    }
+        flex-direction: column;
 
-    .level-row{
-
-        grid-template-columns:1fr;
+        align-items: center;
 
     }
-
 }
