--- a/css/contact.css
+++ b/css/contact.css
@@ -220,3 +220,16 @@
     }
 
 }
+
+@media(max-width:900px){
+
+    .nav-links {
+
+        width: 100%;
+
+        flex-direction: column;
+
+        align-items: center;
+
+    }
+}
